Matching resource and pack view styles

--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -175,7 +175,7 @@
 {% endif %}
 
 {% if user.is_authenticated %}
-<!-- script for table -->
+<!-- script for tables -->
 <script type="text/javascript">
 $(document).ready(function(){
     $('#Resources').DataTable();
