--- a/django_project/templates/treasure/resources.html
+++ b/django_project/templates/treasure/resources.html
@@ -9,8 +9,6 @@
 {% block body_block %}
 
     <div class="hero-unit container panel panel-default">
-        <div class="span5"><a class="btn btn-block btn-primary" href="/treasure/add_file_resource">Add File Resource</a><br></div>
-        <div class="span5"><a class="btn btn-block btn-primary" href="/treasure/add_web_resource">Add Web Resource</a><br></div>
         
         <div class="panel-heading clearfix">
 			<h3>Resources</h3>
@@ -39,6 +37,8 @@
                  </table>
             </div>
         </div> <!-- close body -->
+        <br><div class="span5"><a class="btn btn-block btn-primary" href="/treasure/add_file_resource">Add File Resource</a><br></div>
+        <div class="span5"><a class="btn btn-block btn-primary" href="/treasure/add_web_resource">Add Web Resource</a><br></div>
     </div> <!-- close panel -->
 
 	<!-- script for table -->
