--- a/django_project/templates/treasure/tags.html
+++ b/django_project/templates/treasure/tags.html
@@ -9,6 +9,7 @@
 {% block body_block %}
 <div class="hero-unit">
     <div class="container">
+                
         <h2>Tags</h2>
         
         <div class="span4">
@@ -31,8 +32,8 @@
             <hr>
         </div>
         
-        <div class="span8">
-            <a class="btn btn-primary" href="/treasure/tags/new/">Add New Tag</a>
+        <div class="span4">
+            <a class="btn btn-primary btn-block" href="/treasure/tags/new/">Add New Tag</a>
             <hr>
             <h4>Other</h4>
             <ul>
