--- a/django_project/templates/treasure/packs.html
+++ b/django_project/templates/treasure/packs.html
@@ -7,9 +7,10 @@
 {% endblock %}
 
 {% block body_block %}
-      <div class="panel panel-default hero-unit">
+    <div class="panel panel-default hero-unit">
+
         <div class="panel-heading clearfix">
-			<h3>Packs</h3>
+			<h2>Packs</h2>
         </div>
         <div class="panel-body">
             <div class="table-responsive">
@@ -35,6 +36,7 @@
                  </table>
             </div>
         </div> <!-- close body -->
+        <br><div class="span5"><a class="btn btn-block btn-primary" href="/treasure/packs/new">Create New Pack</a><br></div><br>
     </div> <!-- close panel -->
 
 	<!-- script for table -->
