--- a/django_project/templates/treasure/tag.html
+++ b/django_project/templates/treasure/tag.html
@@ -7,24 +7,91 @@
 {% endblock %}
 
 {% block body_block %}
-<div class="hero-unit">
+<div>
     {% if tag %}
-        <div class="row-fluid">
-		    <h2>{{ tag.name}}</h2>
-		
-		    <h4>Resources:</h4>
-		    {% if tagged_resources %}
-		        <ul>
-		        {% for resource in tagged_resources %}
-		            <li><a href="/../treasure/resource/{{ resource.id }}">{{ resource.name }}</a></li>
-		        {% endfor %}
-		        </ul>
-		    {% else %}
-		        <p>There are no resources for this tag.</p>
-		    {% endif %}
+        <div class="hero-unit">
+		    <h2>{% if tag.type = "0" %}Level Tag		                            
+		        {% elif tag.type == "1" %}Topic Tag
+		        {% else %}Other Tag
+		        {% endif %} - {{ tag.name}}</h2>
+		</div>  
+		<div class="hero-unit">                     
+	        <h3>Resources:</h3>
+	        {% if tagged_resources %}
+                <div class="panel-body">
+	                <div class="table-responsive">
+	                    <table id="Resources" class="table table-striped table-bordered" cellspacing="0" width="100%">
+	                        <thead>
+	                            <tr>
+	                                <th>Resource Name</th>
+	                                <th>Author</th>
+	                                <th>Description</th>
+	                            </tr>
+	                        </thead>
+	                        <tbody>
+	                            {% for resource in tagged_resources %}
+	                                <tr class="Label">
+	                                    <td><a href="/treasure/resource/{{ resource.id }}">{{resource.name}}</a></td>
+	                                    <td>{{resource.author}}</td>
+	                                    <td>{{resource.description}}</td>
+	                                </tr>
+	                            {% endfor %}
+	                        </tbody>
+	                     </table>
+	                </div>
+	            </div> <!-- close body -->
+	        {% else %}
+	            <p>There are no resources with this tag.</p>
+	        {% endif %}
 	    </div>
+	    
+	    <div class="hero-unit">
+	        <h3>Packs:</h3>
+	        {% if tagged_packs %}
+                <div class="panel-body">
+	                <div class="table-responsive">
+	                    <table id="Packs" class="table table-striped table-bordered" cellspacing="0" width="100%">
+	                        <thead>
+	                            <tr>
+	                                <th>Pack Name</th>
+	                                <th>Author</th>
+	                                <th>Description</th>
+	                            </tr>
+	                        </thead>
+	                        <tbody>
+	                            {% for pack in tagged_packs %}
+	                                <tr class="Label">
+	                                    <td><a href="/treasure/packs/{{ pack.id }}">{{ pack.name }}</a></td>
+	                                    <td>{{pack.author}}</td>
+	                                    <td>{{pack.description}}</td>
+	                                </tr>
+	                            {% endfor %}
+	                        </tbody>
+	                     </table>
+	                </div>
+	            </div> <!-- close body -->
+	        {% else %}
+	            <p>There are no packs with this tag.</p>
+	        {% endif %}
+	    </div>
+    </div>
+    
     {% else %}
-        <h2>No Tag At This URL.</h2>
+        <div class="hero-unit"><h2>No Tag At This URL</h2></div>
     {% endif %}
 </div>
+
+<!-- scripts for tables -->
+<script type="text/javascript">
+$(document).ready(function(){
+    $('#Resources').DataTable();
+});
+</script>
+
+<script type="text/javascript">
+$(document).ready(function(){
+    $('#Packs').DataTable();
+});
+</script>
+
 {% endblock %}
