Some small style changes that I noticed in todays meeting.

--- a/django_project/templates/treasure/evolve.html
+++ b/django_project/templates/treasure/evolve.html
@@ -12,7 +12,7 @@
         
         <ul class="nav nav-pills nav-justified">
             <li><a data-toggle="tab" href="#file">Evolve with a File</a></li>
-            <li><a data-toggle="tab" href="#web">Evolve with a link</a></li>
+            <li><a data-toggle="tab" href="#web">Evolve with a Link</a></li>
         </ul>
 
         <div class="tab-content">
