--- a/django_project/templates/treasure/register.html
+++ b/django_project/templates/treasure/register.html
@@ -9,17 +9,17 @@
 {% block body_block %}
 
 <div class="hero-unit">
-    <h2>Add a Teacher</h2>
-    <br/>
-    <div class="container">
-        <form class="span6" id="register_teacher_form" method="post" action="/treasure/register/" enctype="multipart/form-data">
-            {% if registered %}
-                <p>Thank you for registering.</p>
-                <p>Please <a href="/treasure/login/">Login</a></p>
-            {% else %}
+    {% if registered %}
+        <h2>Thank you for registering</h2>
+        <h3>Please <a href="/treasure/login/">Login</a></h3>
+    {% else %}
+        <h2>Add a Teacher</h2>
+        <br/>
+        <div class="container">
+            <form class="span6" id="register_teacher_form" method="post" action="/treasure/register/" enctype="multipart/form-data">
 	
-	        {% csrf_token %}
-	        
+                {% csrf_token %}
+            
                 {% for hidden in user_form.hidden_fields %}
                     {{ hidden }}
                 {% endfor %}
@@ -39,11 +39,11 @@
                     {{ field.help_text }}<br/>
                     {{ field }}<br/>
                 {% endfor %}
-	        {% endif %}
 
-            <br/>
-            <button class="btn btn-primary" type="submit" name="submit">Add Teacher</button>
-        </form>
-    </div>
+                <br/>
+                <button class="btn btn-primary" type="submit" name="submit">Add Teacher</button>
+            </form>
+        </div>
+    {% endif %}
 </div>
 {% endblock %}
