Users can now edit their packs.

--- a/django_project/templates/treasure/pack.html
+++ b/django_project/templates/treasure/pack.html
@@ -57,11 +57,8 @@
         <hr>
         
         {% if owned %}
-        <ul>
-            <!--li><a class="btn btn-block btn-primary" href="">Download Pack?</a></li>
-            <li><p></li-->
-            <li><a class="btn btn-block btn-danger" href="/treasure/packs/{{ pack.id }}/edit">Edit</a></li>
-        </ul>
+            <!--a class="btn btn-block btn-primary" href="">Download Pack?</a-->
+            <a class="btn btn-block btn-danger" href="/treasure/packs/{{ pack.id }}/edit">Edit</a>
         <hr>
         {% endif %}
     </div>
