--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -49,23 +49,17 @@
                 </ul>
                 <hr>
                 
-                <ul>
 					{% if label %}
-                    <li><a class="btn btn-block btn-primary" href="/../treasure/resource/{{resource.id}}/download/"{% if files_resource %} download{% endif %}>{{label}}</a></li>
+                        <a class="btn btn-block btn-primary" href="/../treasure/resource/{{resource.id}}/download/"{% if files_resource %} download{% endif %}>{{label}}</a>
 					{% endif %}
-                    <li><p></li>
-                    <li><a class="btn btn-block btn-warning" href="/../treasure/resource/{{ resource.id}}/evolve">Evolve Resource</a></li>
-                    <!-- todo: uncomment when tracking works
-                    <li><p></li>                  
-                    <li><a class="btn btn-block btn-success" href="/../treasure/resource/{{ resource.id}}/track">Track Resource</a></li>
-                    end track-->
-                    <li><p></li>                    
-                    <li><a class="btn btn-block btn-info" href="/../treasure/resource/{{ resource.id }}/versions">View Versions</a></li>
+                    <a class="btn btn-block btn-warning" href="/../treasure/resource/{{ resource.id}}/evolve">Evolve Resource</a>
+                    <!-- todo: uncomment when tracking works                  
+                    <a class="btn btn-block btn-success" href="/../treasure/resource/{{ resource.id}}/track">Track Resource</a>
+                    end track-->                    
+                    <a class="btn btn-block btn-info" href="/../treasure/resource/{{ resource.id }}/versions">View Versions</a>
                     {% if owned %}
-                        <li><p></li>
-                        <li><a class="btn btn-block btn-danger" href="/../treasure/resource/{{ resource.id }}/edit">Edit</a></li>
+                        <a class="btn btn-block btn-danger" href="/../treasure/resource/{{ resource.id }}/edit">Edit Resource</a>
                     {% endif %}
-                </ul>
                 <hr>
            </div>
         </div>
