--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -90,8 +90,8 @@
 							<ul>
 								{% if user.is_authenticated %}
 									<li><a href="/treasure/" id="home-link" class="skel-layers-ignoreHref"><span>Home</span></a></li>
-									<li><a href="/treasure#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
-                                    <li><a href="/treasure#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
+									<li><a href="/treasure/#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
+                                    <li><a href="/treasure/#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
 									<li><a href="/treasure/profile" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
 									<li><a href="/treasure/history" class="skel-layers-ignoreHref"><span>My History</span></a></li>
 									<li><a href="/treasure/about" class="skel-layers-ignoreHref"><span>About TReaSURe</span></a></li>
