Tabbing now goes through the forms properly #55
Also fixed the alignment on the addtopack page (put it in a span12)

--- a/django_project/templates/treasure/add_hub.html
+++ b/django_project/templates/treasure/add_hub.html
@@ -27,7 +27,7 @@
             {% endfor %}
 
             <br/>
-            <button class="btn btn-primary" type="submit" name="submit">Add Hub</button>
+            <button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Add Hub</button>
         </form>
     </div>
 </div>
