--- a/django_project/templates/treasure/add_file_resource.html
+++ b/django_project/templates/treasure/add_file_resource.html
@@ -37,7 +37,7 @@
             {% endfor %}
 
             <br/>
-            <button class="btn btn-primary" type="submit" name="submit">Upload Resource</button>
+            <button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Upload Resource</button>
         </form>
     </div>
 </div>
