--- a/django_project/templates/treasure/add_pack.html
+++ b/django_project/templates/treasure/add_pack.html
@@ -27,7 +27,7 @@
             {% endfor %}
 
             <br/>
-            <button class="btn btn-primary" type="submit" name="submit">Create Pack</button>
+            <button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Create Pack</button>
         </form>
     </div>
 </div>
