--- a/django_project/templates/treasure/edit_profile.html
+++ b/django_project/templates/treasure/edit_profile.html
@@ -41,7 +41,7 @@
 				{% endfor %}
 				
 				<br/>
-            	<button class="btn btn-primary" type="submit" name="submit">Update Profile</button>
+            	<button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Update Profile</button>
 			
 			{% endif %}
 
