--- a/django_project/templates/treasure/edit_resource.html
+++ b/django_project/templates/treasure/edit_resource.html
@@ -29,7 +29,7 @@
 				
 				
 				    <br/>
-                	<button class="btn btn-primary" type="submit" name="submit">Update Resource</button>
+                	<button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Update Resource</button>
 
             </form>
         {% else %}
