--- a/django_project/templates/treasure/login.html
+++ b/django_project/templates/treasure/login.html
@@ -20,7 +20,7 @@
         <br />
         Password: <input type="password" class="input-block-level" placeholder="Password" name="password" value="" size="50" />
         <br />
-        <button class="btn btn-primary" type="submit">Sign in</button>
+        <button class="btn btn-primary" type="submit tabindex='1'">Sign in</button>
     </form>
 
     </div>
