Finishing cursor in inputs #55
Cursor now starts in the top box of inputs and tab takes you to next in
the proper order.  Also fixing some bugs introduced whilst implementing
feature.

--- a/django_project/templates/treasure/login.html
+++ b/django_project/templates/treasure/login.html
@@ -16,11 +16,11 @@
             <p class="errorlist">Your account is currently disabled; we can't log you in!</p>
         {% endif %}
 
-        Username: <input type="text" class="input-block-level" placeholder="Username" name="username" value="" size="50" />
+        Username: <input type="text" class="input-block-level" placeholder="Username" name="username" value="" size="50" tabindex='1' autofocus='autofocus'/>
         <br />
-        Password: <input type="password" class="input-block-level" placeholder="Password" name="password" value="" size="50" />
+        Password: <input type="password" class="input-block-level" placeholder="Password" name="password" value="" size="50" tabindex='1'/>
         <br />
-        <button class="btn btn-primary" type="submit tabindex='1'">Sign in</button>
+        <button class="btn btn-primary" type="submit" tabindex='1'>Sign in</button>
     </form>
 
     </div>
