--- a/django_project/templates/treasure/evolve.html
+++ b/django_project/templates/treasure/evolve.html
@@ -11,8 +11,8 @@
         <h2>Evolve</h2>
         
         <ul class="nav nav-pills nav-justified">
-            <li><a data-toggle="tab" href="#file">Evolve with a File</a></li>
-            <li><a data-toggle="tab" href="#web">Evolve with a Link</a></li>
+            <li><a data-toggle="tab" href="#file" tabindex='1'>Evolve with a File</a></li>
+            <li><a data-toggle="tab" href="#web" tabindex='1'>Evolve with a Link</a></li>
         </ul>
 
         <div class="tab-content">
@@ -42,7 +42,7 @@
                         {{ field }}<br/>
                     {% endfor %}
                     <br/>
-                    <button class="btn btn-primary" type="submit" name="file_evolve">Upload Resource</button>
+                    <button class="btn btn-primary" type="submit" name="file_evolve" tabindex='1'>Upload Resource</button>
                 </form>
             </div>
             
@@ -71,11 +71,11 @@
                         {{ field }}<br/>
                     {% endfor %}
                     <br/>
-                    <button class="btn btn-primary" type="submit" name="web_evolve">Upload Resource</button>
+                    <button class="btn btn-primary" type="submit" name="web_evolve" tabindex='1'>Upload Resource</button>
                 </form>
             </div>
             
-            <div class="active tab-pane container"">
+            <div class="active tab-pane container">
                 <ul><li><h3>Please select evolution type.</h3></li></ul>
             </div>
 
