Datables now sort/ page on load
Couldn't figure out the problem, just downloaded a new version of
datatables.js, this time with jquery built in.  Seems to work :/

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -12,8 +12,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="{% static 'sidebar/css/ie9.css' %}" /><![endif]-->
 		
 		<script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
-		<script type="text/javascript" src="http://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>
-		
+        <script type="text/javascript" src="https://cdn.datatables.net/s/dt/jq-2.1.4,dt-1.10.10,r-2.0.0/datatables.min.js"></script>		
 		
         <!-- Bootstrap -->
 		<link rel="stylesheet" href="http://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css"></style>
