Updating templates to use summary.

--- a/django_project/templates/treasure/explore.html
+++ b/django_project/templates/treasure/explore.html
@@ -20,7 +20,7 @@
 			                  <img src="{{pack.image}}" style="width: 300px; height: 200px;" data-src="holder.js/300x200" alt="300x200">
 			                  <div class="caption">
 			                    <h3>{{pack.name}}</h3>
-			                    <p>{{pack.description}}</p>
+			                    <p>{{pack.summary}}</p>
 			                    <p><a href="/../treasure/packs/{{ pack.id }}" class="btn btn-primary">View Pack</a></p>
 			                  </div>
 			                </div>
