--- a/django_project/templates/treasure/pack.html
+++ b/django_project/templates/treasure/pack.html
@@ -12,7 +12,10 @@
 
     <div class="span8">
         <h2>{{ pack.name}}</h2>
-        <h4>collated by {{ pack.author }}</h4><br>
+        <h3><strong>{{ pack.summary }}</strong></h3>
+        <h4>collated by {{ pack.author }}</h4>
+        
+        <br>
 
         <h4><strong>Description:</strong></h4>
         <p>{{ pack.description }}</p><br>
