--- a/django_project/templates/treasure/resources.html
+++ b/django_project/templates/treasure/resources.html
@@ -21,7 +21,7 @@
                         <tr>
                             <th>Resource Name</th>
                             <th>Author</th>
-                            <th>Description</th>
+                            <th>Summary</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -29,7 +29,7 @@
                             <tr class="studentLabel">
                                 <td><a href="../resource/{{ resource.id }}">{{resource.name}}</a></td>
                                 <td>{{resource.author}}</td>
-                                <td>{{resource.description}}</td>
+                                <td>{{resource.summary}}</td>
                             </tr>
                         {% endfor %}
 
