--- a/django_project/templates/treasure/search.html
+++ b/django_project/templates/treasure/search.html
@@ -20,7 +20,7 @@
                                 <tr>
                                     <th>Name</th>
                                     <th>Author</th>
-                                    <th>Description</th>
+                                    <th>Summary</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -32,7 +32,7 @@
                                             <td><a href="../packs/{{ result.id }}">{{result.name}}</a></td>
                                         {% endif %}
                                         <td>{{result.author}}</td>
-                                        <td>{{result.description}}</td>
+                                        <td>{{result.summary}}</td>
                                     </tr>
                                 {% endfor %}
 
