--- a/django_project/templates/treasure/packs.html
+++ b/django_project/templates/treasure/packs.html
@@ -19,16 +19,15 @@
                         <tr>
                             <th>Pack Name</th>
                             <th>Author</th>
-                            <th>Description</th>
+                            <th>Summary</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for pack in packs %}
-                            <tr class="studentLabel">
-                            {% url 'bookingsystem.views.managerChildProfile' child.uid as uurl %}
-                                <td><a href="../packs/{{ pack.id }}">{{pack.name}}</a></td>
-                                <td>{{pack.author}}</td>
-                                <td>{{pack.description}}</td>
+                            <tr class="packLabel">
+                                <td><a href="../packs/{{ pack.id }}">{{ pack.name }}</a></td>
+                                <td>{{ pack.author }}</td>
+                                <td>{{ pack.summary }}</td>
                             </tr>
                         {% endfor %}
 
