--- a/django_project/templates/treasure/tags.html
+++ b/django_project/templates/treasure/tags.html
@@ -11,6 +11,9 @@
     <div class="container">
                 
         <h2>Tags</h2>
+        <a class="btn btn-primary" href="/treasure/tags/new/">Add New Tag</a>
+        
+        <hr>
         
         <div class="span4">
             <h4>Levels</h4>
@@ -33,8 +36,7 @@
         </div>
         
         <div class="span4">
-            <a class="btn btn-primary btn-block" href="/treasure/tags/new/">Add New Tag</a>
-            <hr>
+            
             <h4>Other</h4>
             <ul>
                 {% for tag in other_tags %}
