--- a/django_project/templates/treasure/search.html
+++ b/django_project/templates/treasure/search.html
@@ -25,6 +25,7 @@
                             </thead>
                             <tbody>
                                 {% for result in results %}
+                                    {% if result.hidden != 1 and result.restricted != 1 %}
                                     <tr class="studentLabel">
                                         {% if resource %}
                                             <td><a href="../resource/{{ result.id }}">{{result.name}}</a></td>
@@ -34,6 +35,7 @@
                                         <td>{{result.author}}</td>
                                         <td>{{result.summary}}</td>
                                     </tr>
+                                    {% endif %}
                                 {% endfor %}
 
                             </tbody>
@@ -72,7 +74,7 @@
         <!-- script for table -->
         <script type="text/javascript">
         $(document).ready(function(){
-            $('#Resources').DataTable();
+            $('#Results').DataTable();
         });
         </script>
     {% endif %}
