--- a/django_project/templates/treasure/tag.html
+++ b/django_project/templates/treasure/tag.html
@@ -30,11 +30,13 @@
 	                        </thead>
 	                        <tbody>
 	                            {% for resource in tagged_resources %}
+                                    {% if resource.hidden != 1 and resource.restricted != 1 %}                                    
 	                                <tr class="resourceLabel">
 	                                    <td><a href="/treasure/resource/{{ resource.id }}">{{resource.name}}</a></td>
 	                                    <td>{{resource.author}}</td>
 	                                    <td>{{resource.summary}}</td>
 	                                </tr>
+                                    {% endif %}
 	                            {% endfor %}
 	                        </tbody>
 	                     </table>
@@ -60,11 +62,13 @@
 	                        </thead>
 	                        <tbody>
 	                            {% for pack in tagged_packs %}
+                                    {% if pack.hidden != 1 and pack.restricted != 1 %}
 	                                <tr class="packLabel">
 	                                    <td><a href="/treasure/packs/{{ pack.id }}">{{ pack.name }}</a></td>
 	                                    <td>{{pack.author}}</td>
 	                                    <td>{{pack.summary}}</td>
 	                                </tr>
+                                    {% endif %}
 	                            {% endfor %}
 	                        </tbody>
 	                     </table>
