resolve #28 users can create tags in popup
When creating resources, new resources can be added using a popup.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -22,6 +22,11 @@
         <link rel="stylesheet" href="http://getbootstrap.com/examples/sticky-footer-navbar/sticky-footer-navbar.css">
         <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
         <link href="{% static 'css/treasure.css' %}" rel="stylesheet">
+        
+        {{ form.media }}
+        <script type="text/javascript" src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
+        <script type="text/javascript" src="/static/admin/js/core.js"></script>
+        
 
 
     </head>
