--- a/django_project/templates/treasure/add_tag.html
+++ b/django_project/templates/treasure/add_tag.html
@@ -26,7 +26,7 @@
                 {{ field }}<br/>
             {% endfor %}
             
-            {% if popup %}<input type="hidden" name="_popup" value="1">;slg;sdlfghk{% endif %}
+            {% if popup %}<input type="hidden" name="_popup" value="1">{% endif %}
 
             <br/>
             <button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Add Tag</button>
