Popups now work in registration view
Users can add their hub/school in popup window.

--- a/django_project/templates/treasure/add_school.html
+++ b/django_project/templates/treasure/add_school.html
@@ -25,6 +25,8 @@
                 {{ field.help_text }}<br/>
                 {{ field }}<br/>
             {% endfor %}
+            
+            {% if popup %}<input type="hidden" name="_popup" value="1">{% endif %}
 
             <br/>
             <button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Add School</button>
